Edited wiki page PageName through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -63,14 +63,14 @@
 
     首先应裁减系统，使之符合小车的要求，并消除不需要的部分，降低系统开销。
 
-    * 小车需要的资源：
+    小车需要的资源：
         # CMOS摄像头
         # 串口（COM0、COM2）
         # USB Dev （从设备）
         # USB Host （主设备）
         # USB口 U盘
-        # USB口Wifi
-       # USB口通用摄像头（作为备用）
+        # USB口 Wifi 模块
+        # USB口通用摄像头（作为备用）
 
     其它设备暂不需要。
 
