Edited wiki page JoinNote through web user interface.

--- a/wiki/JoinNote.wiki
+++ b/wiki/JoinNote.wiki
@@ -9,7 +9,7 @@
    凡有意加入项目，成为合作者（committer）的朋友，请遵守以下规则：
 
 申请过程:
-  以邮件方式提出申请（从 Download 中下载*报名表*，点“*通过电子邮件提交*”按钮，选择“*因特网电子邮件*”，手工将保存的数据文件作为邮件附件提交），Email:  dingqi@embedream.com 。
+  以邮件方式提出申请（从 Download 中下载“*报名表*”，填写后点“*通过电子邮件提交*”按钮，选择“*因特网电子邮件*”，手工将保存的数据文件作为邮件附件提交），Email:  dingqi@embedream.com 。
 
   * 说明自身情况：姓名、性别、年龄、目前身份、所处城市等
   * 说明所擅长的专业
